add version of pom

--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,14 @@
 
         <dependency>
             <groupId>org.apache.commons</groupId>
-            <artifactId>common-lang3</artifactId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+            <version>26.0-jre</version>
         </dependency>
     </dependencies>
 
