--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,14 @@ server:
   port: 8080
   servlet:
     context-path: /
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/yaouguoji
+    username: root
+    password: liuwen
+    driver-class-name: com.mysql.jdbc.Driver
+
+mybatis:
+  mapper-locations: classpath:sqlmap/*.xml
+  type-aliases-package: com.yaouguoji.platform.entity
