--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/yaouguoji
-    username: root
+    url: jdbc:mysql://39.107.73.6:3306/yaouguoji
+    username: yaouguoji
     password: liuwen
     driver-class-name: com.mysql.jdbc.Driver
 
