--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,11 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://39.107.73.6:3306/yaouguoji
-    username: yaouguoji
-    password: liuwen
+    url: jdbc:mysql://localhost:3306/Yogjxz2017
+    username: root
+    password: 123456
     driver-class-name: com.mysql.jdbc.Driver
 
 mybatis:
-  mapper-locations: classpath:sqlmap/*.xml
+  mapper-locations: classpath:sqlmap/*.xml,mapper/*.xml
   type-aliases-package: com.yaouguoji.platform.entity
