--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>joda-time</artifactId>
             <version>2.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.7</version>
+        </dependency>
     </dependencies>
 
     <build>
