--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://39.107.73.6:3306/yaouguoji
+    url: jdbc:mysql://39.107.73.6:3306/yaouguoji?useSSL=false
     username: yaouguoji
     password: liuwen
     driver-class-name: com.mysql.jdbc.Driver
