--- a/pom.xml
+++ b/pom.xml
@@ -98,4 +98,11 @@
         </plugins>
         <finalName>platform</finalName>
     </build>
+
+    <repositories>
+        <repository>
+            <id>github-maven-repo</id>
+            <url>https://raw.githubusercontent.com/YaOuGuoJi/maven/master</url>
+        </repository>
+    </repositories>
 </project>
