--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>com.xianbester</groupId>
             <artifactId>bester-api</artifactId>
-            <version>0.1.0-RELEASE</version>
+            <version>0.1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
